# advent-of-code-2024

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.hooks/: install_hooks.sh
advent_of_code_2024/common/: read_fixtures.py
advent_of_code_2024/day_01/common/: __init__.py
advent_of_code_2024/day_01/part_01/: main.py
advent_of_code_2024/day_01/part_02/: main.py
advent_of_code_2024/day_02/common/: __init__.py
advent_of_code_2024/day_02/part_01/: main.py
advent_of_code_2024/day_02/part_02/: main.py
advent_of_code_2024/day_03/common/: __init__.py
advent_of_code_2024/day_03/part_01/: main.py
advent_of_code_2024/day_03/part_02/: main.py
advent_of_code_2024/day_04/common/: __init__.py
advent_of_code_2024/day_04/part_01/: main.py
advent_of_code_2024/day_04/part_02/: main.py
advent_of_code_2024/day_05/common/: __init__.py
advent_of_code_2024/day_05/part_01/: main.py
advent_of_code_2024/day_05/part_02/: main.py
advent_of_code_2024/day_06/common/: __init__.py
advent_of_code_2024/day_06/part_01/: main.py
advent_of_code_2024/day_06/part_02/: main.py
advent_of_code_2024/day_07/common/: __init__.py
advent_of_code_2024/day_07/part_01/: main.py
advent_of_code_2024/day_07/part_02/: main.py
advent_of_code_2024/day_08/common/: __init__.py
advent_of_code_2024/day_08/part_01/: main.py
advent_of_code_2024/day_08/part_02/: main.py
advent_of_code_2024/day_09/common/: __init__.py
advent_of_code_2024/day_09/part_01/: main.py
advent_of_code_2024/day_09/part_02/: main.py
advent_of_code_2024/day_10/common/: __init__.py
(+29 files in other folders)
